[package]
name = "curio-connect"
version = "0.1.0"
authors = ["Andrew"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="0.2.22", features = ["macros", "io-util", "sync", "tcp", "dns", "time"] }
serde = { version="1.0.115", features = ["derive"] }
serde_json = { version = "1" }
tokio-serde = { version = "0.6.1", features = ["json"] }
tokio-util = { version="0.3.1", features = ["codec"] }
futures = "0.3"
uuid = { version = "0.4", features = ["serde", "v4"] }
curio-lib = { version="0.1.2", path="../curio-lib" }

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "test_producer"
path = "src/test_producer/main.rs"

[[bin]]
name = "test_consumer"
path = "src/test_consumer/main.rs"